--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>AlxMultimedia</title>
+    <!-- Placeholder for nonce -->
+    <script nonce="__NONCE_PLACEHOLDER__">
+      // Injected nonce script if needed for runtime logic
+      window.__NONCE__ = "__NONCE_PLACEHOLDER__";
+    </script>
+    <script src="/static/js/main.js" defer="defer" nonce="__NONCE_PLACEHOLDER__"></script>
+    <link href="/static/css/main.css" rel="stylesheet" nonce="__NONCE_PLACEHOLDER__" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html><!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Signe_logo_ALX_XL.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AlxMultimedia</title>
-  </head>
-  <body>
-    <noscript>Vous devez activer JavaScript pour voir cette application.</noscript>
     <div id="root"></div>
   </body>
 </html>
