ajout de manifest.json

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>AlxMultimedia</title>
+
     <!-- Placeholder for nonce -->
     <script nonce="__NONCE_PLACEHOLDER__">
-      // Injected nonce script if needed for runtime logic
+      // Injected nonce script for runtime logic
       window.__NONCE__ = "__NONCE_PLACEHOLDER__";
     </script>
-    <script src="/static/js/main.js" defer="defer" nonce="__NONCE_PLACEHOLDER__"></script>
+
+    <!-- Scripts and styles with nonce -->
+    <script defer="defer" src="/static/js/main.js" nonce="__NONCE_PLACEHOLDER__"></script>
     <link href="/static/css/main.css" rel="stylesheet" nonce="__NONCE_PLACEHOLDER__" />
   </head>
   <body>
