--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- Placeholder pour le nonce -->
-    <script nonce="__NONCE_PLACEHOLDER__">
+    <script nonce="__NONCE__">
       // Injected nonce script for runtime logic
-      window.__NONCE__ = "__NONCE_PLACEHOLDER__";
+      window.__NONCE__ = "__NONCE__";
     </script>
 
     <!-- Inclusion sécurisée des scripts et styles -->
-    <script defer src="/static/js/main.js" nonce="__NONCE_PLACEHOLDER__"></script>
-    <link href="/static/css/main.css" rel="stylesheet" nonce="__NONCE_PLACEHOLDER__" />
+    <link href="/static/css/main.css" rel="stylesheet" nonce="__NONCE__" />
+    <script defer src="/static/js/main.js" nonce="__NONCE__"></script>    
   </head>
   <body>
     <noscript>
