ajout d'un commentaire dans index.html

--- a/public/index.html
+++ b/public/index.html
@@ -25,5 +25,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div id="root"></div>
+    <p id="test-placeholder">Ceci est un test pour vérifier l'utilisation de index.html</p>
   </body>
 </html>
