ajustement des fichiers index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AlxMultimedia</title>
-
-    <!-- Icône et manifest -->
-    <link rel="icon" href="%PUBLIC_URL%/Signe_logo_ALX_XL.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="theme-color" content="#000000" />
-
-    <!-- Placeholder pour le nonce -->
-    <script nonce="__NONCE__">
-      // Injected nonce script for runtime logic
-      window.__NONCE__ = "__NONCE__";
-    </script>
-
-    <!-- Inclusion sécurisée des scripts et styles -->
-    <link href="/static/css/main.css" rel="stylesheet" nonce="__NONCE__" />
-    <script defer src="/static/js/main.js" nonce="__NONCE__"></script> 
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>AlxMultimedia</title>
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+  <meta name="theme-color" content="#000000"/>
+  <!-- Placeholder pour le nonce -->
+  <script>window.__NONCE__="__NONCE__"</script>
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
 </html>
