modification des répertoires pour les fichiers statics

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <script nonce="__NONCE__">window.__NONCE__="__NONCE__"</script>
 
   <!-- ✅ Styles CSS -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/build/static/css/main.[hash].css" nonce="__NONCE__">
+  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.[hash].css" nonce="__NONCE__">
 </head>
 
 <body>
@@ -22,6 +22,6 @@
   <div id="root"></div>
 
   <!-- ✅ Scripts JS à la fin pour charger après le DOM -->
-  <script defer="defer" src="%PUBLIC_URL%/build/static/js/main.[hash].js" nonce="__NONCE__"></script>
+  <script defer="defer" src="%PUBLIC_URL%/static/js/main.[hash].js" nonce="__NONCE__"></script>
 </body>
 </html>
