--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AlxMultimedia</title>
 
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
 
-  <!-- ✅ Injection du nonce pour les scripts inline -->
   <script nonce="__NONCE__">window.__NONCE__="__NONCE__"</script>
 
-  <!-- ✅ Lien CSS dynamique -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css" nonce="__NONCE__">
+  <!-- ✅ Fichiers CSS et JS générés dynamiquement -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.[hash].css" nonce="__NONCE__">
 </head>
 <body>
   <noscript>Vous devez activer JavaScript pour exécuter cette application.</noscript>
   <div id="root"></div>
 
-  <!-- ✅ Script JS dynamique -->
-  <script defer="defer" src="%PUBLIC_URL%/static/js/main.js" nonce="__NONCE__"></script>
+  <script defer="defer" src="%PUBLIC_URL%/static/js/main.[hash].js" nonce="__NONCE__"></script>
 </body>
 </html>
