--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
 
-  <script nonce="__NONCE__">window.__NONCE__="__NONCE__"</script>
+  <script nonce="randomstring">window.__NONCE__="randomstring"</script>
 
   <!-- ✅ Fichiers CSS et JS générés dynamiquement -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.[hash].css" nonce="__NONCE__">
+  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.[hash].css" nonce="randomstring">
 </head>
 <body>
   <noscript>Vous devez activer JavaScript pour exécuter cette application.</noscript>
   <div id="root"></div>
 
-  <script defer="defer" src="%PUBLIC_URL%/static/js/main.[hash].js" nonce="__NONCE__"></script>
+  <script defer="defer" src="%PUBLIC_URL%/static/js/main.[hash].js" nonce="randomstring"></script>
 </body>
 </html>
