suppression option fb sign_in et sign_up + ajout logo alx

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AlxMultimedia</title>
 
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/Signe_logo_ALX_XL.ico">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
 
