correction du layout

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AlxMultimedia</title>
 
-  <link rel="icon" href="/Signe_logo_ALX_XL.ico">
+  <!-- 📌 Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/Signe_logo_ALX_XL.ico">
+  <link rel="icon" type="image/png" sizes="48x48" href="/Signe_logo_ALX_XL.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/logo_mobile.png">
+
+  <!-- 📌 Open Graph pour les réseaux sociaux -->
+  <meta property="og:title" content="AlxMultimedia">
+  <meta property="og:description" content="Solutions numériques innovantes pour vos projets.">
+  <meta property="og:image" content="/open_graph.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://alxmultimedia.com">
+
+  <!-- 📌 Manifest pour les PWA -->
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
 
